[package]
name = "yarbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", default-features=false,  features = ["native_tls_backend", "default_no_backend"]}
reqwest = "0.11.10"
serde_json = "1.0.79"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
