[package]
name = "yarbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.1", default-features = false, features = ["rustls_backend", "client", "framework", "standard_framework", "gateway", "builder"]}
reqwest = {version = "0.11.10", default-features = false, features = ["cookies", "gzip", "json", "rustls-tls"]}
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
log = "0.4.16"
fern = {version = "0.6.0", features = ["colored"]}
chrono = "0.4.19"
diesel = {version = "2.0.0-rc.0", features = ["sqlite", "r2d2"]}

[features]
stable = []
cache = ["serenity/cache"]